<resources>
    <string name="app_name">AlkeWallet</string>
    
    <!-- General -->
    <string name="btn_login">Login</string>
    <string name="btn_signup">Signup</string>
    <string name="btn_create_account">Crear cuenta nueva</string>
    <string name="btn_already_account">Ya tienes cuenta?</string>
    <string name="email_hint">Ingresar tu email</string>
    <string name="password_hint">Ingresar tu contraseña</string>
    <string name="forgot_password">Olvidaste tu contraseña?</string>
    
    <!-- Home -->
    <string name="home_title">Inicio</string>
    <string name="home_greeting">Hola, Amanda!</string>
    <string name="home_balance_title">Balance Total</string>
    <string name="home_balance_amount">$124.57</string>
    <string name="btn_send_money">Enviar Dinero</string>
    <string name="btn_request_money">Ingresar dinero</string>
    <string name="transactions_title">Ultimas transacciones</string>
    <string name="no_transactions">No hay transacciones registradas!</string>
    
    <!-- Signup -->
    <string name="title_signup">Registrarse y empezar a transferir</string>
    <string name="name_hint">Ingresar nombre</string>
    <string name="lastname_hint">Ingresar apellido</string>
    <string name="reenter_password_hint">Reingresar contraseña</string>
    
    <!-- Profile -->
    <string name="profile_title">Mi perfil</string>
    <string name="profile_name">Amanda Alkemy</string>
    <string name="profile_opt_info">Mi Informacion</string>
    <string name="profile_opt_cards">Mis tarjetas</string>
    <string name="profile_opt_options">Opciones</string>
    <string name="profile_opt_help">Centro de ayuda</string>
    
    <!-- Transfer -->
    <string name="send_money_title">Enviar Dinero</string>
    <string name="request_money_title">ingresar Dinero</string>
    <string name="amount_to_transfer">Cantidad a transferir</string>
    <string name="amount_to_request">Cantidad a ingresar</string>
    <string name="transfer_notes_hint">Agregar notas de transferencia(opcional)</string>
</resources>